<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/colorchange">

    <PreferenceCategory app:title="@string/messages_header">



        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <!--
   </PreferenceCategory>

   <PreferenceCategory app:title="Theme">
       <CheckBoxPreference
           app:title="Red"
           android:id="@+id/red"/>

       <CheckBoxPreference
           app:title="Blue"
           android:id="@+id/blue"/>

       <CheckBoxPreference
           app:title="Green"
           android:id="@+id/green"/>

   </PreferenceCategory>
   -->



   <PreferenceCategory app:title="@string/sync_header">

       <SwitchPreferenceCompat
           app:key="sync"
           app:title="@string/sync_title" />

       <SwitchPreferenceCompat
           app:dependency="sync"
           app:key="attachment"
           app:summaryOff="@string/attachment_summary_off"
           app:summaryOn="@string/attachment_summary_on"
           app:title="@string/attachment_title" />

   </PreferenceCategory>


</PreferenceScreen>
